--- a/.github/workflows/ci_build.yml
+++ b/.github/workflows/ci_build.yml
@@ -14,43 +14,46 @@ jobs:
         os: [ubuntu-latest, windows-latest]
 
     steps:
-      # 1. 取得
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          submodules: true      # external/ サブモジュールも取得
+    # 1. ソース取得
+    - uses: actions/checkout@v4
+      with:
+        submodules: true
 
-      # 2. Ninja をインストール（OS 共通）
-      - name: Setup Ninja
-        uses: aminya/setup-ninja@v1                # gnu-make 互換 action
+    # 2. Ninja を OS 別にインストール
+    - name: Install Ninja (Ubuntu)
+      if: runner.os == 'Linux'
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y ninja-build
 
-      # 3. Windows 専用：MSVC & Clang
-      - name: Install MSVC env
-        if: runner.os == 'Windows'
-        uses: ilammy/msvc-dev-cmd@v1
-      - name: Install Clang 17 (Windows)
-        if: runner.os == 'Windows'
-        uses: egor-tensin/setup-clang@v1
-        with:
-          version: 17
+    - name: Install Ninja (Windows)
+      if: runner.os == 'Windows'
+      run: choco install -y ninja
 
-      # 4. Linux 専用：Clang / Ninja は GitHub Runner にプリインストール済
-      #    追加パッケージが必要なら apt-get で ninja-build を入れるが
-      #    setup-ninja が解決してくれる。
+    # 3. Windows: MSVC 環境 + Clang 17
+    - name: Setup MSVC
+      if: runner.os == 'Windows'
+      uses: ilammy/msvc-dev-cmd@v1
 
-      # 5. CMake Configure
-      - name: Configure (CMake)
-        run: |
-          cmake -B build -G Ninja \
-            -DPRISM_BUILD_TESTS=ON \
-            -DPRISM_BUILD_SAMPLES=OFF \
-            -DCMAKE_BUILD_TYPE=Release \
-            ${{ runner.os == 'Windows' && '-DCMAKE_TOOLCHAIN_FILE=cmake/Toolchain-clang17.cmake' || '' }}
+    - name: Setup Clang 17 (Windows)
+      if: runner.os == 'Windows'
+      uses: egor-tensin/setup-clang@v1
+      with:
+        version: 17
 
-      # 6. Build
-      - name: Build
-        run: cmake --build build --parallel
+    # 4. CMake Configure
+    - name: Configure (CMake)
+      run: |
+        cmake -B build -G Ninja \
+          ${{ runner.os == 'Windows' && '-DCMAKE_TOOLCHAIN_FILE=cmake/Toolchain-clang17.cmake' || '' }} \
+          -DPRISM_BUILD_TESTS=ON \
+          -DPRISM_BUILD_SAMPLES=OFF \
+          -DCMAKE_BUILD_TYPE=Release
 
-      # 7. Test
-      - name: Run tests
-        run: ctest --test-dir build --output-on-failure
+    # 5. Build
+    - name: Build
+      run: cmake --build build --parallel
+
+    # 6. Test
+    - name: Run tests
+      run: ctest --test-dir build --output-on-failure
