--- a/.github/workflows/ci_build.yml
+++ b/.github/workflows/ci_build.yml
@@ -14,59 +14,55 @@ jobs:
         os: [ubuntu-latest, windows-latest]
 
     steps:
-    # 1. ソース取得
-    - uses: actions/checkout@v4
-      with:
-        submodules: true
+      # 1. ソース取得（submodule を含む）
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          submodules: true
 
-    # 2. Ninja を OS 別にインストール
-    - name: Install Ninja (Ubuntu)
-      if: runner.os == 'Linux'
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y ninja-build
+      # 2. Windows 専用 : MSVC 環境と Clang17
+      - name: Setup MSVC environment
+        if: runner.os == 'Windows'
+        uses: ilammy/msvc-dev-cmd@v1          # vcvars バッチ実行
 
-    - name: Install Ninja (Windows)
-      if: runner.os == 'Windows'
-      run: choco install -y ninja
+      - name: Install Clang 17 (optional warnings)
+        if: runner.os == 'Windows'
+        uses: egor-tensin/setup-clang@v1
+        with:
+          version: 17
 
-    # 3. Windows: MSVC 環境 + Clang 17
-    - name: Setup MSVC
-      if: runner.os == 'Windows'
-      uses: ilammy/msvc-dev-cmd@v1
+      # 3. CMake Configure
+      - name: Configure (CMake)
+        shell: bash
+        run: |
+          if [[ "$RUNNER_OS" == "Windows" ]]; then
+            cmake -B build -G "NMake Makefiles" \
+                  -DPRISM_BUILD_TESTS=ON \
+                  -DPRISM_BUILD_SAMPLES=OFF \
+                  -DCMAKE_BUILD_TYPE=Release
+          else
+            cmake -B build \
+                  -DPRISM_BUILD_TESTS=ON \
+                  -DPRISM_BUILD_SAMPLES=OFF \
+                  -DCMAKE_BUILD_TYPE=Release
+          fi
 
-    - name: Setup Clang 17 (Windows)
-      if: runner.os == 'Windows'
-      uses: egor-tensin/setup-clang@v1
-      with:
-        version: 17
+      # 4. Build
+      - name: Build
+        shell: bash
+        run: |
+          if [[ "$RUNNER_OS" == "Windows" ]]; then
+            cmake --build build --config Release -- /m        # NMake 並列
+          else
+            cmake --build build -j"$(nproc)"
+          fi
 
-    - name: Install Ninja (Windows)
-      if: runner.os == 'Windows'
-      run: |
-        choco install -y ninja
-        echo "C:\ProgramData\chocolatey\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-
-
-    # 4. CMake Configure
-    - name: Configure (CMake)
-      shell: bash
-      run: |
-        EXTRA=""
-        if [[ "$RUNNER_OS" == "Windows" ]]; then
-          EXTRA="-DCMAKE_TOOLCHAIN_FILE=${GITHUB_WORKSPACE}/cmake/Toolchain-clang17.cmake"
-        fi
-
-        cmake -B build -G Ninja \
-              -DPRISM_BUILD_TESTS=ON \
-              -DPRISM_BUILD_SAMPLES=OFF \
-              -DCMAKE_BUILD_TYPE=Release \
-              ${EXTRA}
-
-    # 5. Build
-    - name: Build
-      run: cmake --build build --parallel
-
-    # 6. Test
-    - name: Run tests
-      run: ctest --test-dir build --output-on-failure
+      # 5. Test
+      - name: Run tests
+        shell: bash
+        run: |
+          if [[ "$RUNNER_OS" == "Windows" ]]; then
+            ctest --test-dir build --output-on-failure -C Release
+          else
+            ctest --test-dir build --output-on-failure
+          fi
