--- a/.github/workflows/ci_build.yml
+++ b/.github/workflows/ci_build.yml
@@ -14,57 +14,38 @@ jobs:
         os: [ ubuntu-latest, windows-latest ]
 
     steps:
-    #─────────────────────────────────────────────────────────────
-    # 0. 取得（サブモジュール込み）
-    #─────────────────────────────────────────────────────────────
-    - name: Checkout source
-      uses: actions/checkout@v4
+    # 1. 取得（サブモジュール込み）
+    - uses: actions/checkout@v4
       with:
         submodules: true
 
-    #─────────────────────────────────────────────────────────────
-    # 1. Windows ランナーだけ MSVC と Clang-17 を用意
-    #─────────────────────────────────────────────────────────────
-    - name: MSVC environment
+    # 2. Windows : MSVC 環境のみ
+    - name: Setup MSVC environment
       if: runner.os == 'Windows'
-      uses: ilammy/msvc-dev-cmd@v1  # vcvars を実行して cl / nmake を PATH に
+      uses: ilammy/msvc-dev-cmd@v1
 
-    - name: Setup Clang-17 (optional warnings)
-      if: runner.os == 'Windows'
-      uses: egor-tensin/setup-clang@v1
-      with:
-        version: 17
-
-    #─────────────────────────────────────────────────────────────
-    # 2. CMake configure
-    #─────────────────────────────────────────────────────────────
-    - name: Configure CMake
+    # 3. CMake configure
+    - name: Configure (CMake)
       shell: bash
       run: |
         if [[ "$RUNNER_OS" == "Windows" ]]; then
-          # NMake + MSVC/ClangCL で単一構成
           cmake -B build -G "NMake Makefiles" \
                 -DPRISM_BUILD_TESTS=ON \
                 -DPRISM_BUILD_SAMPLES=OFF \
                 -DCMAKE_BUILD_TYPE=Release
         else
-          # Linux: 既定の “Unix Makefiles”
           cmake -B build \
                 -DPRISM_BUILD_TESTS=ON \
                 -DPRISM_BUILD_SAMPLES=OFF \
                 -DCMAKE_BUILD_TYPE=Release
         fi
 
-    #─────────────────────────────────────────────────────────────
-    # 3. Build（--parallel は CMake が各ジェネレータへ委譲）
-    #─────────────────────────────────────────────────────────────
+    # 4. Build
     - name: Build
       shell: bash
       run: cmake --build build --parallel --config Release
 
-    #─────────────────────────────────────────────────────────────
-    # 4. テスト実行
-    #─────────────────────────────────────────────────────────────
-    - name: Run unit tests
+    # 5. Test
+    - name: Run tests
       shell: bash
-      run: ctest --test-dir build --output-on-failure
+      run: ctest --test-dir build --output-on-failure --config Release
