--- a/.github/workflows/ci_build.yml
+++ b/.github/workflows/ci_build.yml
@@ -14,22 +14,23 @@ jobs:
         os: [ubuntu-latest, windows-latest]
 
     steps:
-    # 1 ─ 取得
+    # 1. checkout
     - uses: actions/checkout@v4
-      with: { submodules: true }
+      with:
+        submodules: true
 
-    # 2 ─ Windows: MSVC (cl.exe) + clang-cl 用環境
+    # 2. Windows: MSVC env (vcvars)  ── Ninja 不要
     - name: Setup MSVC env
       if: runner.os == 'Windows'
       uses: ilammy/msvc-dev-cmd@v1
 
-    # 3 ─ CMake configure
+    # 3. Configure
     - name: Configure (CMake)
       shell: bash
       run: |
         if [[ "$RUNNER_OS" == "Windows" ]]; then
-          # clang-cl (+link.exe) を使う
-          cmake -B build -G "NMake Makefiles" -T ClangCL \
+          # VS Generator + ClangCL toolset
+          cmake -B build -G "Visual Studio 17 2022" -A x64 -T ClangCL \
                 -DPRISM_BUILD_TESTS=ON \
                 -DPRISM_BUILD_SAMPLES=OFF \
                 -DCMAKE_BUILD_TYPE=Release
@@ -40,12 +41,12 @@ jobs:
                 -DCMAKE_BUILD_TYPE=Release
         fi
 
-    # 4 ─ Build (並列)
+    # 4. Build  (VS: multi-config, Make: single-config)
     - name: Build
       shell: bash
       run: cmake --build build --parallel --config Release
 
-    # 5 ─ Test
+    # 5. Test
     - name: Run tests
       shell: bash
       run: ctest --test-dir build --output-on-failure
