--- a/.github/workflows/ci_build.yml
+++ b/.github/workflows/ci_build.yml
@@ -49,4 +49,4 @@ jobs:
     # 5. Test
     - name: Run tests
       shell: bash
-      run: ctest --test-dir build --output-on-failure
+      run: ctest --test-dir build --output-on-failure --config Release
